Fix z-index on popular card

--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,7 @@ body {
   background: var(--primary);
   box-shadow: 0px 42px 34px rgb(82 67 194 / 30%);
   order: -2;
+  z-index: 999;
 }
 
 .card.is-popular .flag {
